--- a/frontend/style.css
+++ b/frontend/style.css
@@ -40,7 +40,7 @@ section{
     align-items: center;
     justify-content: center;
     height: 100vh;
-    weight: 100%;
+    width: 100%;
     }
 
 button{
